# OrkaFin

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  alembic.ini  pyproject.toml
docs/: ACTION_AND_CONFIRMATION_FLOW.md  AI_PROVIDER_MODEL.md  API.md  ARCHITECTURE.md  DECISIONS.md  DEVELOPER_RUNBOOK.md  DOMAIN_MODEL.md  EVENT_AND_AUDIT_MODEL.md  FUTURE_MIGRATION_PLAN.md  KNOWLEDGE_MODEL.md  LOCAL_DEMO.md  LOCAL_SETUP.md  MOCK_ORKA_ATS.md  ORKA_APP_ADAPTER_CONTRACT.md  ORKA_APP_ONBOARDING_GUIDE.md  ORKA_ATS_ADAPTER_CONTRACT.md  PERMISSION_MODEL.md  SECURITY_MODEL.md  TEST_STRATEGY.md  THREAT_MODEL.md  V1_ACCEPTANCE_CHECKLIST.md  V1_SCOPE_AND_NON_GOALS.md
docs/adr/: ADR-001-local-first-architecture.md  ADR-002-application-data-ownership.md  ADR-003-no-vector-database-for-initial-v1.md  ADR-004-provider-independent-ai-interface.md
docs/plans/: OrkaFin_Local_V1_Implementation_Prompt_Pack.md
docs/source/: ORKAFIN_ECOSYSTEM_CONTEXT.md
fixtures/: README.md  retrieval_evaluation.yaml  users.yaml
fixtures/orka_ats/: app.yaml  candidates.yaml  events.yaml  users.yaml
knowledge/orka_ats/: actions.yaml  app.yaml  features.yaml  manifest.yaml  pages.yaml  permissions.yaml  recommendations.yaml
migrations/: env.py
migrations/versions/: 36475e375cb5_add_orkafin_persistence.py  9c2e4f6a1b73_add_recommendation_preferences.py  c19e2a4b7d01_execute_one_mock_action.py  (+1 more)
scripts/: init_database.py  inspect_local_activity.py  run_local_demo.py  scan_secrets.py  validate_knowledge.py
src/orkafin/: __init__.py  (+1 more)
tests/: __init__.py  conftest.py  context_support.py
(+147 files in other folders)
