[build-system]
requires = ["setuptools>=68,<82"]
build-backend = "setuptools.build_meta"

[project]
name = "orkafin"
version = "0.1.0"
description = "Local permission-aware intelligence service for Orka OS."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.13,<2",
    "fastapi>=0.115,<1",
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.3,<3",
    "SQLAlchemy>=2.0,<3",
    "uvicorn[standard]>=0.30,<1",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27,<1",
    "mypy>=1.10,<2",
    "pytest>=8.2,<9",
    "ruff>=0.5,<1",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["orkafin*"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
